--- a/hnode/views/layouts/main.ejs
+++ b/hnode/views/layouts/main.ejs
@@ -96,6 +96,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <!-- Axios -->
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <!-- 通知系统 -->
+  <script src="/js/notifications.js"></script>
   <!-- Toast通知容器 -->
   <div id="toastContainer"></div>
 
